--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "phaser": "^3.60.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^13.0.0",
+    "html-webpack-plugin": "^5.6.3",
+    "ts-loader": "^9.0.0",
     "typescript": "^5.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "ts-loader": "^9.0.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
